cluster/apps/default/nas/endpoint.yaml
---
kind: Endpoints
apiVersion: v1
metadata:
  name: nas-service
  namespace: default
subsets:
  - addresses:
      - ip: ${SECRET_NAS_ADDRESS}
    ports:
      - port: 5000
