cluster/apps/default/nas/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: nas-service
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 5000
