cluster/apps/default/nas/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nas-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: ipv4.${SECRET_DOMAIN}
    external-dns/is-public: "true"
    hajimari.io/appName: nas
    hajimari.io/enable: "true"
    hajimari.io/icon: storage
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: nas.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: nas-service
                port:
                  number: 5000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - nas.${SECRET_DOMAIN}
      secretName: nas-tls
